headlamp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
spec:
  selector:
    app: headlamp
  ports:
    - name: http
      port: 80
      targetPort: 4466
